--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "@angular/cli": "1.0.0-beta.32.3",
     "@angular/compiler-cli": "^2.4.0",
     "@types/jasmine": "2.5.38",
+    "@types/jquery": "^2.0.40",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0-beta.4",
     "jasmine-core": "~2.5.2",
