--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             <artifactId>org.apache.poi.xwpf.converter.pdf</artifactId>
             <version>1.0.6</version>
         </dependency>
+        <!-- Zip File -->
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
