--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <app.context.name>HRAdmin</app.context.name>
 
         <apache.poi.version>3.15</apache.poi.version>
     </properties>
@@ -126,7 +127,8 @@
                             <!-- change path to the directory containing node and npm. -->
                             <installDirectory>C:/iCoding</installDirectory>
                             <workingDirectory>front/</workingDirectory>
-                            <arguments>run ng build --prod</arguments>
+                            <!-- https://github.com/angular/angular-cli/issues/5768#issuecomment-292974135 -->
+                            <arguments>run ng build -- --prod --base-href /${app.context.name}/</arguments>
                         </configuration>
                     </execution>
                 </executions>
