--- a/pom.xml
+++ b/pom.xml
@@ -115,8 +115,33 @@
                 <artifactId>frontend-maven-plugin</artifactId>
                 <!-- Use the latest released version:
                 https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/ -->
-                <version>1.3</version>
+                <version>1.5</version>
+                <configuration>
+                    <!-- 設定了 workingDirectory，因此Maven預設會從 workingDirectory 下尋找 node & yarn -->
+                    <installDirectory>${project.basedir}</installDirectory>
+                    <workingDirectory>front</workingDirectory>
+                </configuration>
                 <executions>
+                    <execution>
+                        <id>install node and yarn</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                            <goal>install-node-and-yarn</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <nodeVersion>v6.11.3</nodeVersion>
+                            <npmVersion>3.10.10</npmVersion>
+                            <yarnVersion>v0.28.4</yarnVersion>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>yarn install</id>
+                        <goals>
+                            <goal>yarn</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                    </execution>
                     <execution>
                         <id>ng build</id>
                         <goals>
@@ -124,9 +149,6 @@
                         </goals>
                         <phase>generate-sources</phase>
                         <configuration>
-                            <!-- change path to the directory containing node and npm. -->
-                            <installDirectory>C:/iCoding</installDirectory>
-                            <workingDirectory>front/</workingDirectory>
                             <!-- https://github.com/angular/angular-cli/issues/5768#issuecomment-292974135 -->
                             <arguments>run ng build -- --prod --base-href /${app.context.name}/</arguments>
                         </configuration>
