--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "random-test-generator",
-  "version": "0.2.0",
+  "version": "0.3.0-SNAPSHOT",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
